charts/templates/virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - backend-gateway
  http:
  - route:
    - destination:
        host: exampleapp #or service/exampleapp
